--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,3 @@
-
 apply plugin: 'com.android.application'
 
 android {
@@ -18,11 +17,20 @@ android {
         }
     }
 
+    signingConfigs {
+        release {
+            storeFile file("H:/booqit/apk bundle key/booqitkey.jks")
+            storePassword "booqitkey"     // 🔑 your actual keystore password
+            keyAlias "mybooqitkey"
+            keyPassword "booqitkey"       // 🔑 your actual key password (same if both are same)
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            // signingConfig signingConfigs.release (uncomment if you configure signing)
+            signingConfig signingConfigs.release
         }
     }
 
